# qcom-test-automation-controller

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  qtac-workspace.pro  repolint.json  repolinter.json
interfaces/C++/TACDev/: CMakeLists.txt  TACDev.cpp  TACDev.h  TACDev.pro  TACDevCore.cpp  TACDevCore.h
src/applications/: CMakeLists.txt  applications.pro
src/applications/device-catalog/: CMakeLists.txt  DeviceCatalog.cpp  DeviceCatalog.h  DeviceCatalog.qrc  DeviceCatalog.rc  DeviceCatalog.ui  DeviceCatalogApplication.cpp  DeviceCatalogApplication.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  DeviceSelectionDialog.ui  device-catalog.pro  main.cpp
src/applications/device-catalog/resources/: DeviceCatalog.desktop  DeviceCatalog.qrc  DeviceCatalog.rc
src/applications/devlist/: CMakeLists.txt  devlist.pro  main.cpp
src/applications/ftdi-check/: CMakeLists.txt  FTDICheckApplication.cpp  FTDICheckApplication.h  FTDICheckCommandLine.cpp  FTDICheckCommandLine.h  ftdi-check.pro  main.cpp
src/applications/ftdi-check/resources/: FTDICheck.desktop  FTDICheck.qrc  FTDICheck.rc
src/applications/programmers/: CMakeLists.txt  programmers.pro
src/applications/programmers/lite-programmer/: CMakeLists.txt  ProgrammerCommandLine.cpp  ProgrammerCommandLine.h  lite-programmer.pro  main.cpp
src/applications/programmers/psoc-programmer/: PSOCProgrammer.pro  PSOCProgrammerCmdLine.cpp  PSOCProgrammerCmdLine.h  main.cpp
src/applications/tac-configuration-editor/: ButtonEditor.cpp  ButtonEditor.h  ButtonEditor.ui  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeEditor.ui  ConfigEditorApplication.cpp  ConfigEditorApplication.h  ConfigWindow.cpp  ConfigWindow.h  ConfigWindow.ui  CreateConfigurationDialog.cpp  CreateConfigurationDialog.h  CreateConfigurationDialog.ui  EditorView.cpp  EditorView.h  FTDIEditorView.cpp  FTDIEditorView.h  FTDIEditorView.ui  ManageTabsDialog.cpp  ManageTabsDialog.h  ManageTabsDialog.ui  PIC32CXEditorView.cpp  PIC32CXEditorView.h  PIC32CXEditorView.ui  PSOCEditorView.cpp  PSOCEditorView.h  PSOCEditorView.ui  PineCommandLine.cpp  PineCommandLine.h  TACPreviewWindow.cpp  TACPreviewWindow.h  TACPreviewWindow.ui  TabEditorDialog.cpp  TabEditorDialog.h  TabEditorDialog.ui  main.cpp  tac-configuration-editor.pro  tac-configuration-editor.rc
src/applications/tac-configuration-editor/resources/: About.txt  TAC.xpm  TACConfigEditor.desktop  TACConfigEditor.qrc  TACConfigEditor.rc
src/applications/tacdump/: CMakeLists.txt  main.cpp  tacdump.pro
src/applications/test-automation-controller/: CMakeLists.txt  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  TAC.rc  TACApplication.cpp  TACApplication.h  TACAutomationInterface.h  TACDeviceSelection.cpp  TACDeviceSelection.h  TACDeviceSelection.ui  TACWindow.cpp  TACWindow.h  TACWindow.ui  main.cpp  test-automation-controller.pro
src/applications/test-automation-controller/resources/: About.txt  TAC.desktop  TAC.qrc  TAC.rc
src/applications/updatedevicelist/: CMakeLists.txt  FTDITemplateCompiler.cpp  FTDITemplateCompiler.h  UDLCommandLine.cpp  UDLCommandLine.h  UpdateDeviceList.cpp  UpdateDeviceList.h  main.cpp  updatedevicelist.pro
src/libraries/qcommon/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AlpacaApplication.cpp  AlpacaApplication.h  ApplicationEnhancements.cpp  ApplicationEnhancements.h  CMakeLists.txt  ColorSwatch.cpp  ColorSwatch.h  Common.cmake  Common.pri  CustomComboBox.h  HappinessDialog.cpp  HappinessDialog.h  HappinessDialog.ui  IntFilteredEditor.cpp  IntFilteredEditor.h  LEDWidget.cpp  LEDWidget.h  PainterEffects.cpp  PainterEffects.h  PinLED.cpp  PinLED.h  PinLED.ui  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  QCommon.cpp  QCommon.h  QCommon.qrc  QCommonGlobal.h  QStyle.qss  StyledLabel.cpp  StyledLabel.h  TableCheckBox.cpp  TableCheckBox.h  TableComboBox.cpp  TableComboBox.h  qcommon.pro
src/libraries/qcommon-console/: AlpacaDefines.cpp  AlpacaDefines.h  AlpacaDevice.cpp  AlpacaDevice.h  AlpacaScript.cpp  AlpacaScript.h  AlpacaSettings.cpp  AlpacaSettings.h  AlpacaSharedLibrary.cpp  AlpacaSharedLibrary.h  AppCore.cpp  AppCore.h  BasicColor.cpp  BasicColor.h  Button.cpp  Button.h  ByteCountFormatter.h  CMakeLists.txt  CSV.cpp  CSV.h  CharBit.cpp  CharBit.h  CommDevice.cpp  CommDevice.h  CommListModel.cpp  CommListModel.h  CommandGroup.h  CommandLineParser.cpp  CommandLineParser.h  Common.cmake  Common.pri  ConsoleApplicationEnhancements.cpp  ConsoleApplicationEnhancements.h  ConsoleInterface.h  CountingStream.cpp  CountingStream.h  DataPoints.h  DateCheckFailEvent.h  DebugBoardType.cpp  DebugBoardType.h  (+131 more)
src/libraries/qcommon-console/private/: TACDriveThread.cpp  TACDriveThread.h  TACLiteCoder.cpp  TACLiteCoder.h  TACLiteCommand.cpp  TACLiteCommand.h  TACLiteDriveThread.cpp  TACLiteDriveThread.h  TACLiteProtocol.cpp  TACLiteProtocol.h  TACPIC32CXCoder.cpp  TACPIC32CXCoder.h  TACPIC32CXCommand.cpp  TACPIC32CXCommand.h  TACPIC32CXDriveThread.cpp  TACPIC32CXDriveThread.h  TACPIC32CXProtocol.cpp  TACPIC32CXProtocol.h  TACPSOCCoder.cpp  TACPSOCCoder.h  TACPSOCCommand.cpp  TACPSOCCommand.h  TACPSOCDriveThread.cpp  TACPSOCDriveThread.h  TACPSOCProtocol.cpp  TACPSOCProtocol.h
src/libraries/qcommon-console/resources/: QCommonConsole.qrc  about.txt
src/libraries/qcommon/resources/: QCResource.qrc
src/libraries/ui-common/: CMakeLists.txt  ColorConversion.cpp  ColorConversion.h  CommandButton.cpp  CommandButton.h  CustomValidator.cpp  CustomValidator.h  HoverAwareQWindow.cpp  HoverAwareQWindow.h  HoverAwareQWindow.ui  I2CWidget.cpp  I2CWidget.h  I2CWidget.ui  MediaPlaybackFrame.cpp  MediaPlaybackFrame.h  MediaPlaybackFrame.ui  NotificationWidget.cpp  NotificationWidget.h  NotificationWidget.ui  ProgressDialog.cpp  ProgressDialog.h  TACFrame.cpp  TACFrame.h  TACFrame.ui  TerminalWidget.cpp  TerminalWidget.h  TerminalWidget.ui  UIGlobalLib.h  UILib.cpp  UILib.h  UserWidget.cpp  UserWidget.h  UserWidget.ui  VariableInput.cpp  VariableInput.h  VariableInput.ui  ui-common.pro
src/libraries/ui-common/resources/: UI.qrc
(+96 files in other folders)
